mystok-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mystok-proxy
  name: mystok-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: mystok-proxy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        io.kompose.service: mystok-proxy
    spec:
      containers:
      - image: dekabitasp/mystok-proxy-github-actions
        imagePullPolicy: ""
        name: mystok-proxy
        ports:
        - containerPort: 80
#        volumeMounts:
#        - mountPath: /etc/nginx/conf.d/
#          name: mystok-proxy-claim0
      restartPolicy: Always
#      serviceAccountName: ""
#      volumes:
#      - name: mystok-proxy-claim0
#        persistentVolumeClaim:
#          claimName: mystok-proxy-claim0
