mystok-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.21.0 ()
#    cloud.google.com/neg: '{"ingress": true}'
  labels:
    io.kompose.service: mystok-app
  name: mystok-app
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: mystok-app
  type: NodePort
