mystok-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mystok-proxy
  name: mystok-proxy
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: mystok-proxy
  type: ClusterIP
